ossm-tcp-egress/case-1/bookinfo/se-mysql.yaml
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: mysql
  namespace: bookinfo
spec:
  exportTo:
  - .
  hosts:
  - "mysql.external"
  location: MESH_INTERNAL
  ports:
  - name: tcp
    number: 3306
    protocol: TCP
