ossm-tcp-egress/case-1/bookinfo/vs-mysql-tcp-egress.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: mysql-egress
  namespace: bookinfo
spec:
  exportTo:
  - .
  gateways:
  - mesh
  hosts:
  - mysql.external
  tcp:
  - match:
    - gateways:
      - mesh
      port: 3306
    route:
    - destination:
        host: default-egress.istio-system.svc.cluster.local
        port:
          number: 443
        subset: v2-mysql
      weight: 100
